# algos

./: .gitignore  README.md  algos  makra.cpp
solved_problems/cses/: Bit_strings.cpp  Chessboard_and_queens.cpp  Collecting_numbers.cpp  Collecting_numbers_2.cpp  Concert_tickets.cpp  Creating_strings.cpp  Digit_queries.cpp  Distinct_numbers.cpp  Ferris_wheel.cpp  Hanoi.cpp  Maxium_subarry_sum.cpp  Missing_coin_sum.cpp  Movie_festival.cpp  Palindrom_reorder.cpp  Playlist.cpp  Restaurant_customers.cpp  Stick_lengths.cpp  Sum_of_two_values.cpp  Towers.cpp  Traffic_lights.cpp  Trailing_zeros.cpp
tutorial/cses/: Apple_division.cpp  Coin_piles.cpp  Gray_code.cpp  Grid_paths.cpp
tutorial/kattis/: GMO.cpp
work_dir/: CMakeLists.txt  a.cpp  run_test
